Fixed the alignment of the widget modal title in config mode

--- a/src/app/pages/dashboard/widget-settings-dialog/widget-settings-dialog.component.scss
+++ b/src/app/pages/dashboard/widget-settings-dialog/widget-settings-dialog.component.scss
@@ -69,6 +69,8 @@
         top: 0;
         right: 0;
         left: 0;
+        padding: 0 15px;
+        width: 100%;
         font-weight: 600;
         text-transform: uppercase;
         text-align: center;
